UserProvider + gamecard+gamecardgrid+herobanner+navbar+router

--- a/src/pages/components/GameCard.css
+++ b/src/pages/components/GameCard.css
@@ -1,3 +1,5 @@
+
+
 .game-card {
     margin: 1rem 0;
     transition: transform 0.2s; /* Animation au survol */
@@ -8,8 +10,6 @@
   }
   
   .game-card .btn {
-    background-color: #ffa500; /* Couleur de fond par défaut des boutons */
-    border: none; /* Pas de bordure */
-    color: white; /* Texte blanc par défaut */
-    margin-top: 1rem; /* Espace au-dessus du bouton */
+    border: none; 
+    margin-top: 1rem;
   }
