--- a/src/App.scss
+++ b/src/App.scss
@@ -20,7 +20,93 @@
 }
 
 html{
-    background-color: var(--dark-color);
     color: var(--text);
     overflow-x: hidden;
+}
+
+body{
+    background-color: var(--dark-color);
+}
+
+.button-5 {
+  align-items: center;
+  width: 200px;
+  background-clip: padding-box;
+  background-color: var(--gradient);
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 1.25;
+  margin: 0;
+  min-height: 3rem;
+  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+  position: relative;
+  text-decoration: none;
+  transition: all 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+}
+
+.button-5:hover,
+.button-5:focus {
+  background-color: var(--gradient);
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+}
+
+.button-5:hover {
+  transform: translateY(-1px);
+}
+
+.button-5:active {
+  background-color: #c85000;
+  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
+  transform: translateY(0);
+}
+
+
+.firstBox{
+    background: rgb(25,25,112);
+    background: linear-gradient(0deg, #0D1B2A 0%, rgba(139,0,0,1) 59%);
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    h2{
+        text-align:center;
+        color: white;
+        font-size: 3rem;
+    }
+    p{
+        text-align: center;
+        color: white;
+    }
+}
+
+.secondBox{
+    background: #0D1B2A;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    h2{
+        text-align:center;
+        color: white;
+        font-size: 3rem;
+    }
+    p{
+        text-align: center;
+        color: white;
+    }
 }
