--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,11 @@ body{
     background-color: var(--dark-color);
 }
 
+h2{
+    color: white !important;
+    font-size: 4rem !important;
+}
+
 .button-5 {
   align-items: center;
   width: 200px;
@@ -84,8 +89,6 @@ body{
     align-items: center;
     h2{
         text-align:center;
-        color: white;
-        font-size: 3rem;
     }
     p{
         text-align: center;
@@ -102,8 +105,6 @@ body{
     align-items: center;
     h2{
         text-align:center;
-        color: white;
-        font-size: 3rem;
     }
     p{
         text-align: center;
