--- a/src/pages/LoginForm.css
+++ b/src/pages/LoginForm.css
@@ -1,49 +1,65 @@
 /* LoginForm.css */
-.login-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f5f5f5;
-  }
-  
-  .login-form {
-    padding: 20px;
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-  }
-  
-  .login-form h2 {
-    text-align: center;
-  }
-  
-  .login-form label {
-    display: block;
-    margin-top: 10px;
-  }
-  
-  .login-form input {
-    width: 100%;
-    padding: 8px;
-    margin-top: 5px;
-    margin-bottom: 20px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  
-  .login-button {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .login-button:hover {
-    background-color: #0056b3;
-  }
-  
+.login-container {
+  display: flex;
+  min-height: 100vh;
+}
+
+.login-image-section {
+  flex: 1;
+  background-image: url('../pages/images/GBteXLaKTMW6z8G5Y7sMs6.jpg'); /* Mettez à jour avec le chemin de votre image */
+  background-size: cover;
+  background-position: center;
+}
+
+.login-form-section {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+  background-color: #1A1A1D; /* Couleur de fond pour la section formulaire */
+}
+
+.login-form-container {
+  width: 100%;
+  max-width: 400px;
+  background: #4E4E50; /* Couleur de fond de la zone de connexion */
+  padding: 40px;
+  border-radius: 8px;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
+  color: white; /* Couleur du texte */
+}
+
+.login-form h2 {
+  margin-bottom: 20px;
+  color: #E2E2E2;
+}
+
+.login-form label {
+  margin-bottom: 5px;
+}
+
+.login-form input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: none;
+  border-radius: 4px;
+}
+
+.login-button {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  background-color: #C9C9C9; /* Couleur du bouton */
+  color: #333;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.login-button:hover {
+  background-color: #F2F2F2;
+}
+
+/* Autres styles si nécessaire */
