--- a/src/pages/components/GameCard.css
+++ b/src/pages/components/GameCard.css
@@ -6,7 +6,8 @@
   }
   
   .game-card:hover {
-    transform: scale(1.05); 
+    transform: scale(1.05);
+    cursor: pointer;
   }
   
   .game-card .btn {
